k8s/authelia/03-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: authelia
    spec:
      securityContext:
        runAsUser:  4000
        runAsGroup: 4000
        fsGroup:    4000
      containers:
      - image: authelia/authelia:4.27.4
        name: authelia
        ports:
        - containerPort: 8080
          name: authelia
        livenessProbe:
          httpGet:
            path: /api/health
            port: authelia
        volumeMounts:
        - name: config
          mountPath: /config/configuration.yml
          subPath: configuration.yml
        - name: users
          mountPath: /config/users_database.yml
          subPath: users_database.yml
      volumes:
      - name: config
        configMap:
          name: authelia-config
      - name: users
        configMap:
          name: authelia-users
