k8s/authelia/01-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: authelia
  type: ClusterIP
