k8s/authelia/05-storage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: authelia
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.4.10
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: data-volume
          hostPath:
            path: /data/storage/mysql

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: authelia
spec:
  selector:
    app: mariadb
  ports:
  - protocol: TCP
    port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: authelia
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:3.2.11-alpine
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: authelia
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
